fixed spacing on catagories

--- a/assets/style.css
+++ b/assets/style.css
@@ -231,7 +231,9 @@ body {
   flex-wrap: wrap;
   justify-content: space-around;
   margin: 0 60px;
+  margin-top: 50px;
   text-align: center;
+
 }
 .product-section h1,
 .product-section p {
